Closed Bug 1824943 Opened 3 years ago Closed 3 years ago

Assertion failure: XRE_IsParentProcess(), at /dist/include/mozilla/gfx/gfxVars.h:167 called from InitVAAPIConfig

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: valentin, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Assertion failure: XRE_IsParentProcess(), at /obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/gfxVars.h:167

#0  0x00007fe997eddaf1 in __GI___clock_nanosleep (clock_id=clock_id@entry=0, flags=flags@entry=0, req=req@entry=0x7ffc41925960, rem=rem@entry=0x7ffc41925960)
    at ../sysdeps/unix/sysv/linux/clock_nanosleep.c:78
#1  0x00007fe997ee2827 in __GI___nanosleep (req=req@entry=0x7ffc41925960, rem=rem@entry=0x7ffc41925960) at ../sysdeps/unix/sysv/linux/nanosleep.c:25
#2  0x00007fe997ee275e in __sleep (seconds=0) at ../sysdeps/posix/sleep.c:55
#3  0x00007fe98cbc8f6f in common_crap_handler(int, void const*) (signum=signum@entry=11, aFirstFramePC=0x7fe98de631b1 <WasmTrapHandler(int, siginfo_t*, void*)+657>)
    at /toolkit/xre/nsSigHandlers.cpp:96
#4  0x00007fe98cbc9080 in child_ah_crap_handler(int) (signum=11) at /toolkit/xre/nsSigHandlers.cpp:110
#5  0x00007fe98de631b1 in WasmTrapHandler(int, siginfo_t*, void*) (signum=11, info=0x7ffc41925bb0, context=0x7ffc41925a80)
    at /js/src/wasm/WasmSignalHandlers.cpp:788
#6  0x00007fe997e3bcf0 in <signal handler called> () at /lib/x86_64-linux-gnu/libc.so.6
#7  mozilla::gfx::gfxVars::VarImpl<bool, &mozilla::gfx::gfxVars::GetHwDecodedVideoZeroCopyDefault, &mozilla::gfx::gfxVars::GetHwDecodedVideoZeroCopyFrom>::Set(bool const&) (this=0x56108c79d6f0, aValue=@0x7ffc419267b8: true) at /obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/gfxVars.h:167
#8  0x00007fe9889486ef in mozilla::gfx::gfxVars::SetHwDecodedVideoZeroCopy(bool const&) (aValue=@0x7ffc419267b8: true)
    at /obj-x86_64-pc-linux-gnu/dist/include/mozilla/gfx/gfxVars.h:213
#9  0x00007fe9889473ba in gfxPlatformGtk::InitVAAPIConfig(bool) (this=<optimized out>, aForceEnabledByUser=<optimized out>)
    at /gfx/thebes/gfxPlatformGtk.cpp:288
#10 0x00007fe98893fc87 in gfxPlatform::InitAcceleration() (this=0x56108c7a0b20) at /gfx/thebes/gfxPlatform.cpp:2446
#11 0x00007fe98893b73e in gfxPlatform::Init() () at /gfx/thebes/gfxPlatform.cpp:919
#12 0x00007fe98893be9b in gfxPlatform::InitChild(mozilla::gfx::ContentDeviceData const&) (aData=...) at /gfx/thebes/gfxPlatform.cpp:479
#13 0x00007fe98accc673 in mozilla::dom::ContentChild::InitGraphicsDeviceData(mozilla::gfx::ContentDeviceData const&) (aData=..., this=<optimized out>)
    at /dom/ipc/ContentChild.cpp:1316
#14 mozilla::dom::ContentChild::RecvSetXPCOMProcessAttributes(mozilla::dom::XPCOMInitData&&, mozilla::dom::ipc::StructuredCloneData const&, mozilla::widget::FullLookAndFeel&&, mozilla::dom::SystemFontList&&, mozilla::Maybe<mozilla::UniquePtr<int, mozilla::detail::FileHandleDeleter> >&&, unsigned long const&, nsTArray<mozilla::UniquePtr<int, mozilla::detail::FileHandleDeleter> >&&, bool const&)
     (this=0x56108c622df0, aXPCOMInit=..., aInitialData=..., aLookAndFeelData=..., aFontList=..., aSharedUASheetHandle=..., aSharedUASheetAddress=@0x7ffc41926c08: 139808433242112, aSharedFontListBlocks=..., aIsReadyForBackgroundProcessing=@0x7ffc41926bc1: false) at /dom/ipc/ContentChild.cpp:689
#15 0x00007fe98add87cd in mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) (this=0x56108c622df0, msg__=<optimized out>)
    at /obj-x86_64-pc-linux-gnu/ipc/ipdl/PContentChild.cpp:11918
#16 0x00007fe9883821f8 in mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&)
    (this=this@entry=0x56108c622e78, aProxy=aProxy@entry=0x56108c630860, aMsg=...) at /ipc/glue/MessageChannel.cpp:1800
#17 0x00007fe988381470 in mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message> >) (this=this@entry=0x56108c622e78, aProxy=aProxy@entry=0x56108c630860, aMsg=...) at /ipc/glue/MessageChannel.cpp:1725
#18 0x00007fe9883817ef in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&)
    (this=0x56108c622e78, aProxy=0x56108c630860, aTask=...) at /ipc/glue/MessageChannel.cpp:1525
#19 0x00007fe988381d24 in mozilla::ipc::MessageChannel::MessageTask::Run() (this=0x7fe990018070) at /ipc/glue/MessageChannel.cpp:1623
#20 0x00007fe987af443b in mozilla::RunnableTask::Run() (this=0x7fe990018100) at /xpcom/threads/TaskController.cpp:553
#21 0x00007fe987aedb36 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)
    (this=this@entry=0x56108c5f5000, aProofOfLock=...) at /xpcom/threads/TaskController.cpp:867
#22 0x00007fe987aecd9c in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)
    (this=this@entry=0x56108c5f5000, aProofOfLock=...) at /xpcom/threads/TaskController.cpp:698
#23 0x00007fe987aecfe9 in mozilla::TaskController::ProcessPendingMTTask(bool) (this=0x56108c5f5000, aMayWait=false)
    at /xpcom/threads/TaskController.cpp:464
#24 0x00007fe987aee00d in mozilla::TaskController::InitializeInternal()::$_3::operator()() const (this=<optimized out>)
--Type <RET> for more, q to quit, c to continue without paging--c
    at /xpcom/threads/TaskController.cpp:188
#25 mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_3>::Run() (this=<optimized out>) at /obj-x86_64-pc-linux-gnu/dist/include/nsThreadUtils.h:548
#26 0x00007fe987b04e75 in nsThread::ProcessNextEvent(bool, bool*) (this=0x56108c62fac0, aMayWait=false, aResult=0x7ffc419289f7) at /xpcom/threads/nsThread.cpp:1239
#27 0x00007fe987b0891b in NS_ProcessNextEvent(nsIThread*, bool) (aThread=0x7fe997ff8a00 <_IO_stdfile_2_lock>, aThread@entry=0x56108c62fac0, aMayWait=false) at /xpcom/threads/nsThreadUtils.cpp:477
#28 0x00007fe9883844c6 in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) (this=0x56108c622b10, aDelegate=0x7ffc41928c30) at /ipc/glue/MessagePump.cpp:85
#29 0x00007fe9882f83cb in MessageLoop::RunInternal() (this=this@entry=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:381
#30 0x00007fe9882f831b in MessageLoop::RunHandler() (this=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:374
#31 MessageLoop::Run() (this=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:356
#32 0x00007fe98b2daf0b in nsBaseAppShell::Run() (this=0x56108c788380) at /widget/nsBaseAppShell.cpp:148
#33 0x00007fe98cbc4b14 in XRE_RunAppShell() () at /toolkit/xre/nsEmbedFunctions.cpp:738
#34 0x00007fe988384b8f in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) (this=0x56108c622b10, aDelegate=0x7ffc41928c30) at /ipc/glue/MessagePump.cpp:235
#35 0x00007fe9882f83cb in MessageLoop::RunInternal() (this=this@entry=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:381
#36 0x00007fe9882f831b in MessageLoop::RunHandler() (this=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:374
#37 MessageLoop::Run() (this=0x7ffc41928c30) at /ipc/chromium/src/base/message_loop.cc:356
#38 0x00007fe98cbc479e in XRE_InitChildProcess(int, char**, XREChildData const*) (aArgc=15, aArgv=0x7ffc4192a0b8, aChildData=<optimized out>) at /toolkit/xre/nsEmbedFunctions.cpp:673
#39 0x000056108b09f1ea in content_process_main(mozilla::Bootstrap*, int, char**) (bootstrap=0x56108c5cf860, argc=17, argv=0x7ffc4192a0b8) at /browser/app/../../ipc/contentproc/plugin-container.cpp:57
#40 0x000056108b09f5a0 in main(int, char**, char**) (argc=1, argv=0x1, envp=0x7ffc4192a150) at /browser/app/nsBrowserApp.cpp:353

Thanks, will look at it.

Assignee: nobody → stransky
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/0c1bf153cb8c [VAAPI] Don't init VAAPI in child process r=emilio
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: