Bug 1824943 [VAAPI] Don't init VAAPI in child process r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D173950